# Attendance-report

./: .gitignore  Dockerfile  README.md  cli.py  container.py  docker-compose.yml  main.py  pyproject.toml  scratch.py  test_parse.py
config/: ruls.py
core/: exceptions.py  observer.py  report_processor_protocol.py
core/models/: attendance_report.py  attendance_report_A_models.py  attendance_report_B_models.py  attendance_report_models.py
detectors/: report_detector.py
enums/: report_type.py
factory/: processor_factory.py
parse/: base_parser.py  parser_a.py  parser_b.py
pdf_rander/: base_rander.py  rander_a.py  rander_b.py
pdf_render/: base_render.py  render_a.py  render_b.py
processores/: parse_processor.py  processor_a.py  processor_b.py
processors/: base_processor.py  processor_a.py  processor_b.py  report_processor.py
repositories/: ocr_reposiitory.py
services/: attendance_parsing_service.py  attendance_report.py  attendance_report_service.py  ocr_service.py  pdf_generator.py  pdf_generator_service.py  time_variation_service.py
tests/: test_attendance_report.py  test_attendance_report_service.py  test_factory_and_report_processor.py  test_integration_end_to_end.py  test_legacy_processors.py  test_ocr_repository.py  test_ocr_service.py  test_parse_processor.py  test_parsers.py  test_pdf_render.py  test_processor_a_b.py  test_processor_factory.py  test_report_detector.py  test_time_variation_service.py  test_variation_services.py
variation/: base_variation.py  validating_strategy_decorator.py  variation_a.py  variation_b.py
