[project]
name = "attendance-report"
version = "0.1.0"
description = "Attendance Report Generator and Analyzer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdf2image",
    "pytesseract",
    "pillow",
    "pymupdf>=1.27.2.2",
    "weasyprint>=68.0",
    "reportlab>=4.4.10",
    "opencv-python>=4.13.0.92",
]

[tool.setuptools]
packages = [
    "core", "detectors", "enums", "factory", "fonts", "output", 
    "parse", "pdf_render", "processors", "repositories", "samples", 
    "services", "variation"
]
